--- a/angular-client/src/app/components/social-groups-tab/social-groups-tab.component.html
+++ b/angular-client/src/app/components/social-groups-tab/social-groups-tab.component.html
@@ -1,3 +1,15 @@
 <div class="social-groups-tab" *ngIf="isAsyncDataPresent">
-  {{ self.username }}
+
+  
+  <mat-expansion-panel class="mat-elevation-z0" [expanded]="false">
+    <mat-expansion-panel-header>
+      <mat-panel-title>
+        <h1>
+          <span [style]="titleColor">create group</span>
+        </h1>
+      </mat-panel-title>
+    </mat-expansion-panel-header>
+      Hello
+  </mat-expansion-panel>
+
 </div>
