Format and fix bug where border was missing cuz of wrong name

--- a/angular-client/src/app/components/social-cell/social-cell.component.html
+++ b/angular-client/src/app/components/social-cell/social-cell.component.html
@@ -3,7 +3,7 @@
   (opened)="onPanelOpen()"
   (closed)="onPanelClose()"
   class="mat-elevation-z0"
-  border
+  appBorder
   [bStyle]="panelOpenState ? 'solid' : 'hidden'"
   [bPadding]="panelOpenState ? 5 : 0">
   <mat-expansion-panel-header cdkDragHandle>
