--- a/angular-client/src/app/components/social-groups-tab/social-groups-tab.component.html
+++ b/angular-client/src/app/components/social-groups-tab/social-groups-tab.component.html
@@ -20,6 +20,13 @@
           >{{ input.value?.length || 0 }}/20</mat-hint
         >
       </mat-form-field>
+
+      <app-user-filterable-multi-select
+        (selectionChange)="onFriendsSelectionChange($event)"
+        [(selection)]="selectedFriend"
+        [selectable]="friends$ | async"
+        label="Friends"
+        [none]="false"></app-user-filterable-multi-select>
       <button
         mat-raised-button
         color="primary"
