--- a/angular-client/src/app/app.component.css
+++ b/angular-client/src/app/app.component.css
@@ -1,3 +1,7 @@
+/* This is a top level styles sheet that is making use of ::ng-deep to globally stylize common components so that future css isnt needed.
+  Essentially theming. 
+*/
+
 /* input color class */
 ::ng-deep input.mat-input-element {
   color: aliceblue;
@@ -91,4 +95,14 @@
 /* All select values apply these rules */
 ::ng-deep .mat-select-value {
   color: aliceblue;
+}
+
+/* All pseudo checkboxes apply these rules */
+::ng-deep .mat-pseudo-checkbox {
+  color: rgba(255, 255, 255, 0.5);
+}
+
+/* All pseudo checkboxes that are checked apply these rules */
+::ng-deep .mat-pseudo-checkbox-checked {
+  background-color: #673ab7;
 }
