Remove unneeded css class

--- a/angular-client/src/app/components/social-friend-requests-list/social-friend-requests-list.component.html
+++ b/angular-client/src/app/components/social-friend-requests-list/social-friend-requests-list.component.html
@@ -1,8 +1,7 @@
 <form
   *ngIf="isInboundFriendRequestsComponent()"
-  class="home-form"
   (ngSubmit)="sendFriendRequest()">
-  <mat-form-field class="home-full-width">
+  <mat-form-field>
     <mat-label>Send Friend Request</mat-label>
     <input matInput [(ngModel)]="potentialFriend" name="sendFriendRequest" />
   </mat-form-field>
