More style changes to make friends and groups tabs consistent

--- a/angular-client/src/app/components/social-friend-requests-list/social-friend-requests-list.component.css
+++ b/angular-client/src/app/components/social-friend-requests-list/social-friend-requests-list.component.css
@@ -46,3 +46,7 @@ td.mat-cell:last-of-type {
 ::ng-deep .mat-expansion-indicator:after {
   color: rgba(255, 255, 255, 0.5);
 }
+
+.social-friend-requests-full-width {
+  width: 100%;
+}
