--- a/angular-client/src/app/components/social-groups-tab/social-groups-tab.component.html
+++ b/angular-client/src/app/components/social-groups-tab/social-groups-tab.component.html
@@ -1,5 +1,5 @@
 <div class="social-groups-tab" *ngIf="isAsyncDataPresent">
-  <mat-expansion-panel class="mat-elevation-z0" [expanded]="false">
+  <mat-expansion-panel class="mat-elevation-z0" [expanded]="true">
     <mat-expansion-panel-header>
       <mat-panel-title>
         <h1>
