--- a/angular-client/src/app/components/social-friend-requests-list/social-friend-requests-list.component.html
+++ b/angular-client/src/app/components/social-friend-requests-list/social-friend-requests-list.component.html
@@ -1,12 +1,3 @@
-<form
-  *ngIf="isInboundFriendRequestsComponent()"
-  (ngSubmit)="sendFriendRequest()">
-  <mat-form-field>
-    <mat-label>Send Friend Request</mat-label>
-    <input matInput [(ngModel)]="potentialFriend" name="sendFriendRequest" />
-  </mat-form-field>
-</form>
-
 <mat-expansion-panel class="mat-elevation-z0" [expanded]="true">
   <mat-expansion-panel-header>
     <mat-panel-title>
@@ -15,6 +6,14 @@
       </h1>
     </mat-panel-title>
   </mat-expansion-panel-header>
+  <form
+    *ngIf="isInboundFriendRequestsComponent()"
+    (ngSubmit)="sendFriendRequest()">
+    <mat-form-field class="social-friend-requests-full-width">
+      <mat-label>Send Friend Request</mat-label>
+      <input matInput [(ngModel)]="potentialFriend" name="sendFriendRequest" />
+    </mat-form-field>
+  </form>
   <table mat-table [dataSource]="friendRequests" class="mat-elevation-z0">
     <ng-container matColumnDef="username">
       <td mat-cell *matCellDef="let element">
