Add send button for friend requests

--- a/angular-client/src/app/components/social-friend-requests-list/social-friend-requests-list.component.html
+++ b/angular-client/src/app/components/social-friend-requests-list/social-friend-requests-list.component.html
@@ -13,6 +13,13 @@
       <mat-label>Send Friend Request</mat-label>
       <input matInput [(ngModel)]="potentialFriend" name="sendFriendRequest" />
     </mat-form-field>
+    <button
+      mat-raised-button
+      color="primary"
+      type="submit"
+      [disabled]="!potentialFriend">
+      Send
+    </button>
   </form>
   <table mat-table [dataSource]="friendRequests" class="mat-elevation-z0">
     <ng-container matColumnDef="username">
