Extracted up some self setting logic. Made social sidenav more consistent in implementation

--- a/angular-client/src/app/components/social-groups-tab/social-groups-tab.component.html
+++ b/angular-client/src/app/components/social-groups-tab/social-groups-tab.component.html
@@ -1,9 +1,4 @@
 <div class="social-groups-tab" *ngIf="isAsyncDataPresent">
-  <app-social-create-group
-    [self]="self"
-    [selfJWT]="selfJWT"></app-social-create-group>
-
-  <app-social-groups-list
-    [self]="self"
-    [selfJWT]="selfJWT"></app-social-groups-list>
+  <app-social-create-group></app-social-create-group>
+  <app-social-groups-list></app-social-groups-list>
 </div>
