--- a/angular-client/src/app/components/home/home.component.html
+++ b/angular-client/src/app/components/home/home.component.html
@@ -2,7 +2,9 @@
   <mat-card class="home-card">
     <mat-card-header>
       <div mat-card-avatar class="home-header-image"></div>
-      <mat-card-title>Hello, {{ self.username }}</mat-card-title>
+      <mat-card-title
+        >Hello, {{ matchMakingService.self.username }}</mat-card-title
+      >
       <mat-card-subtitle>Wanna play a qwicki?</mat-card-subtitle>
     </mat-card-header>
     <mat-card-content>
