Successful login/logout with global state store

--- a/angular-client/src/app/components/user-filterable-multi-select/user-filterable-multi-select.component.html
+++ b/angular-client/src/app/components/user-filterable-multi-select/user-filterable-multi-select.component.html
@@ -1,4 +1,4 @@
-<mat-form-field color="white" appearance="legacy">
+<mat-form-field>
   <mat-label>{{ label }}</mat-label>
   <mat-select
     [(ngModel)]="selection"
