--- a/angular-client/src/app/components/social-sidenav/social-sidenav.component.html
+++ b/angular-client/src/app/components/social-sidenav/social-sidenav.component.html
@@ -5,12 +5,13 @@
   <mat-drawer #drawer class="example-sidenav" mode="over">
     <h1>
       <span
+        style="margin-right: 8px"
         routerLink="/user-profile"
         matTooltip="Go to User Profile"
         class="material-icons profile-icon"
         >account_circle</span
       >
-      {{ self.username }}
+      <span *ngIf="user$ | async as user">{{ user.username }}</span>
     </h1>
     <mat-divider></mat-divider>
 
@@ -24,5 +25,6 @@
       </mat-tab>
     </mat-tab-group>
   </mat-drawer>
-  <app-home [self]="self" [selfJWT]="selfJWT"></app-home>
+  <!-- <app-home [self]="self" [selfJWT]="selfJWT"></app-home> -->
+  <div class="main-div">Hello World</div>
 </mat-drawer-container>
