--- a/angular-client/src/app/components/social-sidenav/social-sidenav.component.html
+++ b/angular-client/src/app/components/social-sidenav/social-sidenav.component.html
@@ -1,5 +1,5 @@
 <mat-drawer-container
-  *ngIf="isAsyncDataPresent"
+  *ngIf="(isLoading$ | async) === false"
   class="example-container"
   autosize>
   <mat-drawer #drawer class="example-sidenav" mode="over">
@@ -14,7 +14,7 @@
       <span *ngIf="user$ | async as user">{{ user.username }}</span>
     </h1>
     <mat-divider></mat-divider>
-<!-- 
+    <!-- 
     <mat-tab-group
       class="social-sidenav-tab-group social-sidenav-no-pagination">
       <mat-tab label="Friends">
