Almost done wrapping colyseus service with state

--- a/angular-client/src/app/components/social-sidenav/social-sidenav.component.html
+++ b/angular-client/src/app/components/social-sidenav/social-sidenav.component.html
@@ -1,5 +1,5 @@
 <mat-drawer-container
-  *ngIf="(isLoading$ | async) === false"
+  *ngIf="(userStateIsLoading$ | async) === false"
   class="example-container"
   autosize>
   <mat-drawer #drawer class="example-sidenav" mode="over">
