COMMENTING OUT ALL SOCIAL

--- a/angular-client/src/app/components/social-cell/social-cell.component.html
+++ b/angular-client/src/app/components/social-cell/social-cell.component.html
@@ -1,4 +1,4 @@
-<mat-expansion-panel
+<!-- <mat-expansion-panel
   cdkDrag
   (opened)="onPanelOpen()"
   (closed)="onPanelClose()"
@@ -25,4 +25,4 @@
     [(friend)]="friend"
     (removeFriend)="onRemoveFriend()"
     (unviewedMessage)="onUnviewedMessage()"></app-social-chat-box>
-</mat-expansion-panel>
+</mat-expansion-panel> -->
