--- a/angular-client/src/app/components/social-create-group/social-create-group.component.html
+++ b/angular-client/src/app/components/social-create-group/social-create-group.component.html
@@ -1,4 +1,4 @@
-<mat-expansion-panel class="mat-elevation-z0" [expanded]="true">
+<!-- <mat-expansion-panel class="mat-elevation-z0" [expanded]="true">
   <mat-expansion-panel-header>
     <mat-panel-title>
       <h1>
@@ -33,4 +33,4 @@
       Create
     </button>
   </form>
-</mat-expansion-panel>
+</mat-expansion-panel> -->
