--- a/angular-client/src/app/components/social-friend-requests-list/social-friend-requests-list.component.html
+++ b/angular-client/src/app/components/social-friend-requests-list/social-friend-requests-list.component.html
@@ -1,4 +1,4 @@
-<mat-expansion-panel class="mat-elevation-z0" [expanded]="true">
+<!-- <mat-expansion-panel class="mat-elevation-z0" [expanded]="true">
   <mat-expansion-panel-header>
     <mat-panel-title>
       <h1>
@@ -61,4 +61,4 @@
       mat-row
       *matRowDef="let row; columns: friendRequestsDisplayedColumns"></tr>
   </table>
-</mat-expansion-panel>
+</mat-expansion-panel> -->
