--- a/angular-client/src/app/components/social-friends-tab/social-friends-tab.component.html
+++ b/angular-client/src/app/components/social-friends-tab/social-friends-tab.component.html
@@ -1,4 +1,4 @@
-<div class="social-friends-tab" *ngIf="isAsyncDataPresent">
+<!-- <div class="social-friends-tab" *ngIf="isAsyncDataPresent">
   <app-social-friend-requests-list
     title="friend requests"
     titleColor="color:aliceblue"
@@ -36,4 +36,4 @@
       [(friendRequests)]="outboundFriendRequests"
       [update]="update"></app-social-friend-requests-list>
   </mat-expansion-panel>
-</div>
+</div> -->
