--- a/angular-client/src/app/components/social-friends-list/social-friends-list.component.html
+++ b/angular-client/src/app/components/social-friends-list/social-friends-list.component.html
@@ -1,4 +1,4 @@
-<mat-expansion-panel class="mat-elevation-z0" [expanded]="true">
+<!-- <mat-expansion-panel class="mat-elevation-z0" [expanded]="true">
   <mat-expansion-panel-header>
     <mat-panel-title>
       <h1>
@@ -22,4 +22,4 @@
     </ng-container>
     <tr mat-row *matRowDef="let row; columns: friendsDisplayedColumns"></tr>
   </table>
-</mat-expansion-panel>
+</mat-expansion-panel> -->
