--- a/angular-client/src/app/components/social-sidenav/social-sidenav.component.html
+++ b/angular-client/src/app/components/social-sidenav/social-sidenav.component.html
@@ -14,16 +14,16 @@
       <span *ngIf="user$ | async as user">{{ user.username }}</span>
     </h1>
     <mat-divider></mat-divider>
-    <!-- 
+    
     <mat-tab-group
       class="social-sidenav-tab-group social-sidenav-no-pagination">
       <mat-tab label="Friends">
         <app-social-friends-tab></app-social-friends-tab>
       </mat-tab>
-      <mat-tab label="Groups">
+      <!-- <mat-tab label="Groups">
         <app-social-groups-tab> </app-social-groups-tab>
-      </mat-tab>
-    </mat-tab-group> -->
+      </mat-tab> -->
+    </mat-tab-group>
   </mat-drawer>
   <!-- <app-home [self]="self" [selfJWT]="selfJWT"></app-home> -->
   <div class="main-div">Hello World</div>
