--- a/angular-client/src/app/components/social-cell/social-cell.component.html
+++ b/angular-client/src/app/components/social-cell/social-cell.component.html
@@ -1,4 +1,4 @@
-<!-- <mat-expansion-panel
+<mat-expansion-panel
   cdkDrag
   (opened)="onPanelOpen()"
   (closed)="onPanelClose()"
@@ -19,10 +19,10 @@
       >
     </mat-panel-description>
   </mat-expansion-panel-header>
-  <app-social-chat-box
+  <!-- <app-social-chat-box
     [panelOpenState]="panelOpenState"
     [potentialMessage]="potentialMessage"
     [(friend)]="friend"
     (removeFriend)="onRemoveFriend()"
-    (unviewedMessage)="onUnviewedMessage()"></app-social-chat-box>
-</mat-expansion-panel> -->
+    (unviewedMessage)="onUnviewedMessage()"></app-social-chat-box> -->
+</mat-expansion-panel>
