--- a/angular-client/src/app/components/social-friends-list/social-friends-list.component.html
+++ b/angular-client/src/app/components/social-friends-list/social-friends-list.component.html
@@ -1,4 +1,4 @@
-<!-- <mat-expansion-panel class="mat-elevation-z0" [expanded]="true">
+<mat-expansion-panel class="mat-elevation-z0" [expanded]="true">
   <mat-expansion-panel-header>
     <mat-panel-title>
       <h1>
@@ -14,12 +14,9 @@
     class="mat-elevation-z0">
     <ng-container matColumnDef="username">
       <td mat-cell *matCellDef="let element; let i = index">
-        <app-social-cell
-          [potentialMessage]="potentialMessage"
-          [(friend)]="friends.filteredData[i]"
-          (removeFriend)="onRemoveFriend(element)"></app-social-cell>
+        <app-social-cell [(friend)]="friends.filteredData[i]"></app-social-cell>
       </td>
     </ng-container>
     <tr mat-row *matRowDef="let row; columns: friendsDisplayedColumns"></tr>
   </table>
-</mat-expansion-panel> -->
+</mat-expansion-panel>
