--- a/angular-client/src/app/components/social-chat-box/social-chat-box.component.html
+++ b/angular-client/src/app/components/social-chat-box/social-chat-box.component.html
@@ -1,4 +1,4 @@
-<!-- <div>
+<div (mousedown)="$event.stopPropagation()">
   <div class="scrollable" #scrollable>
     <table mat-table [dataSource]="messages" class="mat-elevation-z0">
       <ng-container matColumnDef="message">
@@ -52,4 +52,4 @@
     class="material-icons-outlined"
     >person_remove</span
   >
-</div> -->
+</div>
