--- a/angular-client/src/app/components/social-friends-list/social-friends-list.component.html
+++ b/angular-client/src/app/components/social-friends-list/social-friends-list.component.html
@@ -8,12 +8,12 @@
   </mat-expansion-panel-header>
   <table
     cdkDropList
-    (cdkDropListDropped)="dropFriends($event)"
+    (cdkDropListDropped)="dropFriend($event)"
     mat-table
     [dataSource]="friends"
     class="mat-elevation-z0">
     <ng-container matColumnDef="username">
-      <td mat-cell *matCellDef="let element; let i = index">
+      <td mat-cell *matCellDef="let element; let i = index" cdkDrag>
         <app-social-cell [(friend)]="friends.filteredData[i]"></app-social-cell>
       </td>
     </ng-container>
