--- a/angular-client/src/app/components/social-cell/social-cell.component.html
+++ b/angular-client/src/app/components/social-cell/social-cell.component.html
@@ -20,6 +20,6 @@
   </mat-expansion-panel-header>
   <app-social-chat-box
     [panelOpenState]="panelOpenState"
-    [(friend)]="friend"
+    [friend]="friend"
     (unviewedMessage)="onUnviewedMessage()"></app-social-chat-box>
 </mat-expansion-panel>
