--- a/angular-client/src/app/components/social-friends-tab/social-friends-tab.component.html
+++ b/angular-client/src/app/components/social-friends-tab/social-friends-tab.component.html
@@ -21,17 +21,8 @@
       </mat-form-field>
     </form>
     <app-social-friends-list
-      title="online"
-      titleColor="color:rgb(0, 255, 149)"
-      [(friends)]="onlineFriends"></app-social-friends-list>
-    <app-social-friends-list
-      title="offline"
-      titleColor="color:rgb(255, 0, 76)"
-      [(friends)]="offlineFriends"></app-social-friends-list>
-    <!-- <app-social-friend-requests-list
-      title="pending"
-      titleColor="color:rgba(236, 232, 0, 0.884)"
-      [(friendRequests)]="outboundFriendRequests"
-      [update]="update"></app-social-friend-requests-list> -->
+      title="friends"
+      titleColor="color: rgb(0, 162, 255)"
+      [friends]="friends"></app-social-friends-list>
   </mat-expansion-panel>
 </div>
