HTTP friend request logic working

--- a/angular-client/src/app/components/social-chat-box/social-chat-box.component.html
+++ b/angular-client/src/app/components/social-chat-box/social-chat-box.component.html
@@ -48,7 +48,7 @@
   >
   <span
     matTooltip="Remove Friend"
-    (click)="onRemoveFriend()"
+    (click)="removeFriend()"
     class="material-icons-outlined"
     >person_remove</span
   >
