--- a/angular-client/src/app/components/social-sidenav/social-sidenav.component.html
+++ b/angular-client/src/app/components/social-sidenav/social-sidenav.component.html
@@ -1,7 +1,4 @@
-<mat-drawer-container
-  *ngIf="(userStateIsLoading$ | async) === false"
-  class="example-container"
-  autosize>
+<mat-drawer-container class="example-container" autosize>
   <mat-drawer #drawer class="example-sidenav" mode="over">
     <h1>
       <span
