Everything but messaging seems to be back to working state

--- a/angular-client/src/app/components/social-friend-requests-list/social-friend-requests-list.component.html
+++ b/angular-client/src/app/components/social-friend-requests-list/social-friend-requests-list.component.html
@@ -44,7 +44,7 @@
         <span
           *ngIf="isInboundFriendRequestsComponent()"
           matTooltip="Accept Friend Request"
-          (click)="acceptFriendRequest(element)"
+          (click)="addNewFriend(element)"
           class="material-icons-outlined"
           >person_add_alt</span
         >
